--- a/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
+++ b/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
@@ -30,7 +30,11 @@
   <style>
     .container {
       display: grid;
+      height: 600px;
       grid-gap: 20px;
+      border: 10px solid var(--yellow);
+      grid-template-columns: 1fr 2fr 1fr;
+      grid-template-rows: 4fr 2fr 1fr;
     }
   </style>
 </body>
