--- a/10 - Placing Grid Items/placing-START.html
+++ b/10 - Placing Grid Items/placing-START.html
@@ -18,7 +18,7 @@
     <div class="item item6">6</div>
     <div class="item item7">7</div>
     <div class="item item8">8</div>
-    <div class="item item8">💩</div>
+    <div class="item poop">💩</div>
     <div class="item item9">9</div>
     <div class="item item10">10</div>
     <div class="item item11">11</div>
@@ -49,6 +49,16 @@
       grid-gap: 20px;
       grid-template-columns: repeat(5, 1fr);
     }
+
+  .poop {
+    background: blue;
+    grid-column: span 2 /-1;
+    /*grid-column-start: 2;
+    grid-column-end: 5;*/
+    grid-row: 3/7;
+    grid-row-start: 5; 
+    grid-row-end: 9;
+  }
   </style>
 </body>
 
