upto 14 grid template areas

--- a/12 - auto-fit and auto-fill/auto-fit-and-auto-fill-START.html
+++ b/12 - auto-fit and auto-fill/auto-fit-and-auto-fill-START.html
@@ -14,6 +14,7 @@
     <div class="item item2">Item 02</div>
     <div class="item item3">Item 03</div>
     <div class="item item4">Item 04</div>
+<!--
     <div class="item item5">Item 05</div>
     <div class="item item6">Item 06</div>
     <div class="item item7">Item 07</div>
@@ -31,12 +32,13 @@
     <div class="item item19">Item 19</div>
     <div class="item item20">Item 20</div>
   </div>
-
+-->
   <style>
     .container {
       display: grid;
       grid-gap: 20px;
       border: 10px solid var(--yellow);
+      grid-template-columns: repeat(auto-fit, 150px);
     }
   </style>
 </body>
