--- a/18 - Re-ordering Grid Items/order-START.html
+++ b/18 - Re-ordering Grid Items/order-START.html
@@ -21,6 +21,22 @@
     .container {
       display: grid;
       grid-gap: 20px;
+      grid-template-columns: repeat(10, 1fr);
+    }
+
+    .logo {
+      grid-colum: span 2;
+      order: 2;
+    }
+
+    .nav {
+      grid-column: span 8;
+      order: 1;
+    }
+
+    .content {
+      grid-column: span 8;
+      order: 3;
     }
   </style>
 </body>
