--- a/15 - Naming Lines in CSS Grid/naming-lines-START.html
+++ b/15 - Naming Lines in CSS Grid/naming-lines-START.html
@@ -46,14 +46,8 @@
     .container {
       display: grid;
       grid-gap: 20px;
-      grid-template-columns: [sidebar-start site-left] 1fr [content-start] 500px [site-right]1fr;
-      grid-template-rows: [content-top] repeat(10, auto) [content-bottom];
-    }
-
-    .item3 {
-      background: red;
-      grid-column: content-start;
-      grid-row: content-top / content-bottom;
+      grid-template-columns: 1fr 500px 1fr;
+      grid-template-rows: repeat(10, auto);
     }
   </style>
 </body>
